# opencv_examples

./: CMakeLists.txt  README.md  obtain_histogram.cpp  opencv_features.py  sift_detect.cpp
